[gd_scene load_steps=2 format=3 uid="uid://cjixclio2j6r8"]

[ext_resource type="Script" path="res://scripts/MainUI.gd" id="1_hq73c"]

[node name="Main_menu" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("1_hq73c")

[node name="Control" type="Control" parent="UI"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5
offset_top = -15.5
offset_right = 15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -50.5
offset_right = 51.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="btn_start" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="btn_how_to" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "How To Play"

[node name="btn_leaderboard" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Leaderboard
"

[node name="btn_Quit" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Label" type="Label" parent="UI/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_top = -136.5
offset_right = 68.0
offset_bottom = -113.5
grow_horizontal = 2
text = "Enter Your Name"

[node name="btn_save" type="Button" parent="UI/Control"]
layout_mode = 0
offset_left = 84.5
offset_top = -106.5
offset_right = 136.5
offset_bottom = -64.5
text = "Save"

[node name="NameBox" type="TextEdit" parent="UI"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -124.0
offset_right = 60.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 2

[node name="Leaderboard" type="Label" parent="."]
offset_left = 458.0
offset_top = 74.0
offset_right = 690.0
offset_bottom = 153.0

[connection signal="pressed" from="UI/Control/VBoxContainer/btn_start" to="UI" method="_on_btn_start_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/btn_how_to" to="UI" method="_on_btn_how_to_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/btn_leaderboard" to="UI" method="_on_btn_leaderboard_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/btn_Quit" to="UI" method="_on_btn_quit_pressed"]
[connection signal="pressed" from="UI/Control/btn_save" to="UI" method="_on_btn_save_pressed"]
